<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="97dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/add_stride_lbl"
        android:textSize="35sp" />

    <Button
        android:id="@+id/btn_monthly"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText1"
        android:text="@string/monthly_btn_lbl" />

    <Button
        android:id="@+id/btn_weekly"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_yearly"
        android:layout_alignBottom="@+id/btn_yearly"
        android:layout_alignParentRight="true"
        android:text="@string/weekly_btn_lbl" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_monthly"
        android:text="@string/done_btn_lbl" />

    <Button
        android:id="@+id/btn_yearly"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:text="@string/yearly_btn_lbl" />

</RelativeLayout>