<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/signin_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/signin_banner"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/tb_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_lbl"
        android:layout_centerHorizontal="true"
        android:ems="10" 
        android:inputType="text">"

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/username_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_username"
        android:layout_below="@+id/signin_banner"
        android:layout_marginTop="24dp"
        android:text="@string/Username_lbl" />

    <TextView
        android:id="@+id/password_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_username"
        android:layout_below="@+id/tb_username"
        android:layout_marginTop="16dp"
        android:text="@string/Password_lbl" />

    <EditText
        android:id="@+id/tb_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_lbl"
        android:layout_below="@+id/password_lbl"
        android:ems="10"
        android:inputType="textPassword" >
<!--         <requestFocus /> -->
    </EditText>

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_password"
        android:layout_below="@+id/tb_password"
        android:layout_toLeftOf="@+id/btn_createnew"
        android:text="@string/singin_btn_lbl"
        android:onClick="signInBtnClicked" />

    <Button
        android:id="@+id/btn_createnew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tb_password"
        android:layout_below="@+id/tb_password"
        android:text="@string/create_btn_lbl" 
        android:onClick="createBtnClicked"/>

    <CheckBox
        android:id="@+id/cb_rememberme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_signin"
        android:layout_below="@+id/btn_signin"
        android:text="@string/rememberme_btn_lbl"
        android:onClick="rememberMeClicked" />

</RelativeLayout>