<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv_find_strider_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/find_strider_lbl"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_striderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_find_strider_lbl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_search_striders_name_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_striderName"
        android:layout_below="@+id/tv_find_strider_lbl"
        android:layout_marginTop="22dp"
        android:text="@string/search_strider_name_lbl" />

    <Button
        android:id="@+id/btn_search_specific"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_striderName"
        android:layout_below="@+id/et_striderName"
        android:text="@string/search_specific_btn_lbl" />

    <Button
        android:id="@+id/btn_search_all"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_search_specific"
        android:layout_alignBottom="@+id/btn_search_specific"
        android:layout_alignRight="@+id/et_striderName"
        android:text="@string/search_all_btn_lbl" />

</RelativeLayout>